tests/baselines/reference/_caxnc-ez0001.errors.txt
_caxnc-ez0001.ts(8,5): error TS18048: 'obj' is possibly 'undefined'.


==== _caxnc-ez0001.ts (1 errors) ====
    declare type Foo = { readonly foo: number[] };
    
    declare const obj: Foo | undefined;
    const isObj = !!obj;
    if (isObj) {
        obj.foo;
    } else {
        obj.foo;
        ~~~
!!! error TS18048: 'obj' is possibly 'undefined'.
    }